--- a/power/src/app/app.component.scss
+++ b/power/src/app/app.component.scss
@@ -37,6 +37,12 @@ footer li::before {
     min-height: calc(100vh - 57px - 306px);
 }
 
+nav {
+    box-shadow: 0 0 0.25rem #343a40;
+    -webkit-box-shadow: 0 0 0.25rem #343a40;
+    -moz-box-shadow: 0 0 0.25rem #343a40;
+}
+
 @media (max-width: 576px) {
     nav .dropdown-item {
         white-space: normal !important;
