--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -380,7 +380,7 @@
                     </ul>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 p-1 m-0">
-                    <h5 id="languages"
+                    <!--<h5 id="languages"
                         title="Sprachauswahl"
                         i18n
                         i18n-title>Sprache</h5>
@@ -395,7 +395,7 @@
                                class="footer-link"
                                rel="noopener">English</a>
                         </li>
-                    </ul>
+                    </ul>-->
                 </div>
                 <div class="col-12 col-md-12 col-lg-4 p-1 m-0">
                     <!-- Only for Modules Bodenrichtwerte/Bodenwertkalkulator -->
