Updated gmb links

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -88,7 +88,7 @@
                         <a class="dropdown-item"
                            *ngIf="config.modules.includes('grundstuecksmarktberichte')"
                            (click)="isCollapsed = true; isCollapsedImmo = true"
-                           href="https://www.boris.niedersachsen.de/boris/gmbdownload"
+                           href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/download/grundstuecksmarktberichte---download-88368.html"
                            target="_blank"
                            rel="noopener noreferrer nofollow"
                            i18n>Grundstücksmarktberichte</a>
