--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -38,7 +38,7 @@
                     <div class="lead text-dark">
                         <a class="btn btn-primary"
                            role="button"
-                           href="https://www.boris.niedersachsen.de/boris/gmbdownload"
+                           href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/download/grundstuecksmarktberichte---download-88368.html"
                            target="_blank"
                            rel="noopener noreferrer nofollow"
                            i18n>Zur Anwendung</a>
@@ -214,7 +214,7 @@
             <div class="col-md-7"
                  [class.order-md-2]="getCardOrder('grundstuecksmarktberichte')">
                 <a class="h2 display-4"
-                   href="https://www.boris.niedersachsen.de/boris/gmbdownload"
+                   href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/download/grundstuecksmarktberichte---download-88368.html"
                    target="_blank"
                    rel="noopener noreferrer nofollow">
                     <span style="color: #343a40;"
@@ -233,7 +233,7 @@
             </div>
             <div class="col-md-5"
                  aria-hidden="true">
-                <a href="https://www.boris.niedersachsen.de/boris/gmbdownload"
+                <a href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/download/grundstuecksmarktberichte---download-88368.html"
                    target="_blank"
                    rel="noopener noreferrer nofollow"
                    i18n-title
