--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 p-0">
     <ng-container *ngIf="chartOption?.series.length != 0">
         <h3 i18n>Zeitliche Entwicklung</h3>
-        <ng-container *ngIf="features?.features[0].properties.gema == 'Bremerhaven'; else bremen">
+        <ng-container *ngIf="features?.features[0].properties.gema === 'Bremerhaven'; else bremen">
             <p> Die Bodenrichtwerte in Bremerhaven werden in einem zwei Jahreszyklus mit Stichtag 31.12. festgelegt.
                 Der letzte Stichtag war der {{ getBremerhavenStichtag() }}
                 Die zeitliche Entwicklungsreihe berücksichtigt nur die Bodenrichtwerte, die zu diesem Stichtag
@@ -9,7 +9,7 @@
                 Sie berücksichtigt keine unterjährigen konjunkturellen Entwicklungen.</p>
         </ng-container>
         <ng-template #bremen>
-            <ng-container *ngIf="features?.features[0].properties.gabe == 'Gutachterausschuss für Grundstückswerte in Bremen';
+            <ng-container *ngIf="features?.features[0].properties.gabe === 'Gutachterausschuss für Grundstückswerte in Bremen';
                      else niedersachsen">
                 <p> Die Bremer Bodenrichtwerte werden in einem zwei Jahreszyklus mit Stichtag 31.12. festgelegt.
                     Der letzte Stichtag war der {{ getBremenStichtag() }}
