--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -37,10 +37,8 @@
                     </h2>
                     <div class="lead text-dark">
                         <a class="btn btn-primary"
+			   [routerLink]="['grundstuecksmarktberichte']"
                            role="button"
-                           href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/download/grundstuecksmarktberichte---download-88368.html"
-                           target="_blank"
-                           rel="noopener noreferrer nofollow"
                            i18n>Zur Anwendung</a>
                     </div>
                 </div>
@@ -214,9 +212,8 @@
             <div class="col-md-7"
                  [class.order-md-2]="getCardOrder('grundstuecksmarktberichte')">
                 <a class="h2 display-4"
-                   href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/download/grundstuecksmarktberichte---download-88368.html"
-                   target="_blank"
-                   rel="noopener noreferrer nofollow">
+		   [routerLink]="['/grundstuecksmarktberichte']"
+                   >
                     <span style="color: #343a40;"
                           i18n>Grundstücksmarktberichte</span>
                 </a>
@@ -233,9 +230,7 @@
             </div>
             <div class="col-md-5"
                  aria-hidden="true">
-                <a href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/download/grundstuecksmarktberichte---download-88368.html"
-                   target="_blank"
-                   rel="noopener noreferrer nofollow"
+                <a [routerLink]="['/grundstuecksmarktberichte']"
                    i18n-title
                    title="Grundstücksmarktberichte"
                    tabindex="-1">
