--- a/power/src/app/gmb/gmb/gmb.component.scss
+++ b/power/src/app/gmb/gmb/gmb.component.scss
@@ -58,7 +58,14 @@ label {
 }
 
 input[type=checkbox] {
-    display: none;
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+}
+
+input[type=checkbox]:focus ~ dt label {
+    outline: rgb(59, 153, 252) auto 5px;
 }
 
 input[type=checkbox]:checked ~ .remove-check {
