--- a/power/src/app/gmb/gmb/gmb.component.scss
+++ b/power/src/app/gmb/gmb/gmb.component.scss
@@ -27,6 +27,11 @@ div.alert-gmb {
     margin-top: 1rem;
 }
 
+div.dropdown {
+    text-align: center;
+    padding-top: .5rem;
+}
+
 .card {
     margin-bottom: 1.5rem;
 }
