Updated module list

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -223,8 +223,7 @@
             <div class="col-md-7"
                  [class.order-md-2]="getCardOrder('grundstuecksmarktberichte')">
                 <a class="h2 display-4"
-		   [routerLink]="['/grundstuecksmarktberichte']"
-                   >
+                   [routerLink]="['/grundstuecksmarktberichte']">
                     <span style="color: #343a40;"
                           i18n>Grundstücksmarkt&shy;berichte</span>
                 </a>
